--- a/portal-php/public_html/mockup/css/custom.css
+++ b/portal-php/public_html/mockup/css/custom.css
@@ -70,6 +70,11 @@ hr {
         color: #ffffff;
     }
 }
+.share-form { padding: 30px}
+.panel-default { padding-bottom: 25px; padding-top: 25px; padding-left: 35px; padding-right: 35px }
+.input-header { text-align: center; padding-left: 80px; padding-right: 80px }
+.submit-button {text-align: center}
+
 .footer {
     background-color: #f5f5f5;
     bottom: 0;
