--- a/portal-php/public_html/mockup/css/custom.css
+++ b/portal-php/public_html/mockup/css/custom.css
@@ -21,6 +21,12 @@ hr {
     margin: 1em 0;
     padding: 0;
 }
+p {
+    margin: 0 0 0 0;
+}
+.row {
+    margin-bottom: 10px;
+}
 .row li {
     margin-top: 10px
 }
