--- a/portal-php/public_html/design/src/css/custom.css
+++ b/portal-php/public_html/design/src/css/custom.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'pt_sans', sans-serif;
     font-size: 160%;
     /* Margin bottom by footer height */
     margin-bottom: 60px;
