--- a/dashboard-js/client/components/navbar/navbar.html
+++ b/dashboard-js/client/components/navbar/navbar.html
@@ -10,9 +10,12 @@
       <a href="/" class="navbar-brand">egov.ua</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
+
       <ul class="nav navbar-nav">
-        <li ng-show="isLoggedIn()" ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-            <a ng-href="{{item.link}}">{{item.title}}</a>
+        <li ng-repeat="item in menus"
+            ng-show="isLoggedIn()"
+            ng-class="{active: isTaskFilterActive(item.type)}">
+          <a ng-click="applyTaskFilter(item.type)">{{item.title}}</a>
         </li>
       </ul>
 
