Added basic template of documents. Added basic template of journal. Nowe we can open next pages: 1) "documents" 2) "journal"

--- a/portal-php/public_html/design/src/html/layouts/header.html
+++ b/portal-php/public_html/design/src/html/layouts/header.html
@@ -18,12 +18,12 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a ui-sref="documents">
 						<h4>Мої документи</h4>
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a ui-sref="journal">
 						<h4>Мій журнал</h4>
 					</a>
 				</li>
