Added auto redirection to #/index page.

--- a/portal-php/public_html/design/src/html/layouts/header.html
+++ b/portal-php/public_html/design/src/html/layouts/header.html
@@ -13,7 +13,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="#">
+					<a href="#/">
 						<h4>Про портал</h4>
 					</a>
 				</li>
