--- a/dashboard-js/client/components/navbar/navbar.html
+++ b/dashboard-js/client/components/navbar/navbar.html
@@ -12,7 +12,9 @@
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li ng-show="isLoggedIn()" ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-            <a ng-href="{{item.link}}">{{item.title}}</a>
+            <a ng-href="{{item.link}}">{{item.title}}
+              <span class="label label-info">{{tasks.length}}</span>
+            </a>
         </li>
       </ul>
 
