--- a/dashboard-js/client/components/navbar/navbar.html
+++ b/dashboard-js/client/components/navbar/navbar.html
@@ -17,7 +17,8 @@
             ng-show="isLoggedIn()"
             ng-class="{active: isTaskFilterActive(item.type)}">
           <a ng-click="applyTaskFilter(item.type)">{{item.title}}
-            <span class="label label-info">{{tasks.length}}</span>
+            <span class="label label-info"
+                    ng-show='isTaskFilterActive(item.type)'>{{tasks.length}}</span>
           </a>
         </li>
       </ul>
