--- a/dashboard-js/client/components/navbar/navbar.html
+++ b/dashboard-js/client/components/navbar/navbar.html
@@ -25,7 +25,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Увійти</a></li>
-        <li ng-show="isLoggedIn()"><p class="navbar-text">{{ getCurrentUserName()}}</p> </li>
+        <li ng-show="isLoggedIn()"><a href="" ng-click="goToTasks()">{{ getCurrentUserName()}}</a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Вийти</a></li>
       </ul>
     </div>
