search input and style. gruntfile livereload port changed

--- a/dashboard-js/client/app/tasks/tasks.css
+++ b/dashboard-js/client/app/tasks/tasks.css
@@ -1,3 +1,7 @@
-.task-menu-item.active {
-    background-color: #f8f8f8;
-}
+.tasks .task {
+  cursor: pointer; }
+.tasks .task a {
+  margin-right: 0;
+  border-radius: 0; }
+.tasks .task.active {
+  background-color: #cccccc; }
