--- a/dashboard-js/client/app/tasks/tasks.css
+++ b/dashboard-js/client/app/tasks/tasks.css
@@ -1,7 +1,17 @@
-.tasks .task {
-  cursor: pointer; }
-.tasks .task a {
-  margin-right: 0;
-  border-radius: 0; }
-.tasks .task.active {
-  background-color: #cccccc; }
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px 20px 20px 60px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: whitesmoke;
+    border-right: 1px solid #eeeeee; }
+
+  .main {
+    padding-top: 20px;
+    top: 51px; } }
