--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -4,7 +4,8 @@ html {
 }
 
 body {
-    font-family: 'pt_sans', sans-serif;
+    font-family: 'PT Sans', sans-serif;
+
     font-size: 160%;
     /* Margin bottom by footer height */
     margin-bottom: 60px;
