https://github.com/e-government-ua/i/issues/209

--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
 	<div class="container">
-		<p class="text-muted text-center"> i.gov.ua @ Зроблено ІТ-волонтерами України</p>
+		<p class="text-muted text-center"> e-gov.org.ua @ Зроблено ІТ-волонтерами України</p>
 	</div>
 </footer>
