--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -6,7 +6,7 @@
 			<span class="icon-bar"></span>
 		</button>
 		<div class="navbar-header">
-			<a class="navbar-brand" href="index.html">i.gov.ua</a>
+			<a class="navbar-brand" href="/">e-gov.org.ua</a>
 			<br>
 			<p class="sitename">Портал державних послуг</p>
 		</div>
