--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -8,7 +8,7 @@
 		<div class="navbar-header">
 			<a class="navbar-brand" href="/">e-gov.org.ua</a>
 			<br>
-			<p class="sitename">Портал державних послуг</p>
+			<p class="sitename">портал державних послуг</p>
 		</div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
