#77bae0 в выбранном табе главного портала

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -109,7 +109,8 @@ a {
 }
 
 .menu-item.selected {
-    background-color: #8FD3F7;
+    /*background-color: #8FD3F7;*/
+    background-color: #77bae0;
     /*background-color: violet;*/
 }
 
