show documents after authorization

--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -19,8 +19,8 @@
 					</a>
 				</li>
 				<li class="menu-item"
-                    ng-class="{selected: state.is('documents')}">
-					<a ui-sref="documents">
+                    ng-class="{selected: state.is('documents.bankid')}">
+					<a ui-sref="documents.bankid">
 						<h4>Мої документи</h4>
 					</a>
 				</li>
