e-gov.org.ua > igov.org.ua back

--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -6,7 +6,7 @@
 			<span class="icon-bar"></span>
 		</button>
 		<div class="navbar-header">
-			<a class="navbar-brand" href="/">igov.org.ua</a>
+			<a class="navbar-brand" href="/">e-gov.org.ua</a>
 			<br>
 			<p class="sitename">портал державних послуг</p>
 		</div>
