--- a/dashboard-js/client/components/navbar/navbar.html
+++ b/dashboard-js/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">egov.ua</a>
+      <a href="/" class="navbar-brand">igov.org.ua</a>
     </div>
 
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
