https://github.com/e-government-ua/i/issues/275

--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -15,7 +15,7 @@
 				<li class="menu-item"
                     ng-class="{selected: state.is('index')}">
 					<a ui-sref="index">
-						<h4>Про портал</h4>
+						<h4>Послуги</h4>
 					</a>
 				</li>
 				<li class="menu-item"
@@ -28,6 +28,12 @@
                     ng-class="{selected: state.is('journal')}">
 					<a ui-sref="journal">
 						<h4>Мій журнал</h4>
+					</a>
+				</li>
+				<li class="menu-item"
+                    ng-class="{selected: state.is('index')}">
+					<a ui-sref="index">
+						<h4>Про портал</h4>
 					</a>
 				</li>
 			</ul>
