https://github.com/e-government-ua/i/issues/275 about

--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -31,8 +31,8 @@
 					</a>
 				</li>
 				<li class="menu-item"
-                    ng-class="{selected: state.is('index')}">
-					<a ui-sref="index">
+                    ng-class="{selected: state.is('about')}">
+					<a ui-sref="about">
 						<h4>Про портал</h4>
 					</a>
 				</li>
