https://github.com/e-government-ua/i/issues/273 +

--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -25,8 +25,8 @@
 					</a>
 				</li>
 				<li class="menu-item"
-                    ng-class="{selected: state.is('journal')}">
-					<a ui-sref="journal">
+                    ng-class="{selected: state.is('journal.bankid')}">
+					<a ui-sref="journal.bankid">
 						<h4>Мій журнал</h4>
 					</a>
 				</li>
