-убрано "зачекайте" -добавлено Увага - сайт в розрлобці

--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -10,6 +10,11 @@
 			<br>
 			<p class="sitename">портал державних послуг</p>
 		</div>
+                <div class="navbar-header">
+			<br>
+			<p class="sitename" style="color:red;">Увага: сайт в процессі розробки!</p>
+		</div>
+            
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="menu-item"
