Style workpieces for admin buttons added

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -490,3 +490,15 @@ a {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
+.controls-admin {
+    visibility: hidden;
+}
+.cat-icon {
+    
+}
+.subcat-icon {
+    
+}
+.serv-icon {
+    
+}
