Add admin buttons (itteration)

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -490,7 +490,7 @@ a {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
-.btn-admin {
+.ctrls-admin {
     
 }
 .glyphicon-plus {
