--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -1,5 +1,13 @@
 <footer class="footer">
 	<div class="container">
-		<p class="text-muted text-center"> igov.org.ua @ Зроблено ІТ-волонтерами України</p>
+            <p class="text-muted text-center"> igov.org.ua <a id="admin-swch">@</a> Зроблено ІТ-волонтерами України</p>
 	</div>
 </footer>
+
+<script>
+    $(document).ready(function(){
+        $("#admin-swch").click(function(){
+           $(".ctrls-admin").css("display", "inline");
+        });
+    });
+</script>
