Add admin buttons (itteration)

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -517,6 +517,9 @@ a {
 .add0-subcat {
       left: 0px;
 }
+#admin-swch {
+    text-decoration: none;
+}
 a.pluso-more {
     display: none !important;
 }
