--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -7,7 +7,7 @@
 <script>
     $(document).ready(function(){
         $("#admin-swch").click(function(){
-           $(".ctrls-admin").css("display", "inline");
+           $("#admin-swch").$("#admin-swch").toggle();
         });
     });
 </script>
