https://github.com/e-government-ua/i/issues/326

--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
 	<div class="container">
-            <p class="text-muted text-center"> igov.org.ua <a id="admin-swch">@</a> Зроблено ІТ-волонтерами України</p>
+            <p class="text-muted text-center"> iGov.org.ua <a id="admin-swch">@</a> Зроблено ІТ-волонтерами України</p>
 	</div>
 </footer>
