--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -60,7 +60,8 @@ a {
     float: left;
     position: absolute;
     top: 50px;
-    margin-left: 40px;
+    margin-left: 30px;
+    margin-top: 10px;
 }
 
 .navbar-default {
@@ -72,6 +73,8 @@ a {
     webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
     min-height: 80px;
     margin-bottom: 40px;
+    margin-top: 10px;
+    
 }
 
 .nav > li > a {
