https://github.com/e-government-ua/i/issues/325 +

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -413,6 +413,7 @@ a {
     width: 16px;
     height: 16px;
    margin-right: 5px;
+   margin-bottom: 3px;
 }
 
 .icon-e-service-off {
@@ -425,6 +426,7 @@ a {
     width: 16px;
     height: 16px;
    margin-right: 5px;
+   margin-bottom: 3px;
 }
 
 .i-btn-badge {
