--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -73,7 +73,7 @@ a {
     webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
     min-height: 80px;
     margin-bottom: 40px;
-    margin-top: 10px;
+    padding-top: 10px;
     
 }
 
