--- a/central-js/client/src/html/layouts/header.html
+++ b/central-js/client/src/html/layouts/header.html
@@ -23,12 +23,12 @@
 					</a>
 				</li>
 				<li class="menu-item" ui-sref-active="selected">
-					<a ui-sref="documents.bankid">
+					<a ui-sref="documents">
 						<h4>Мої документи</h4>
 					</a>
 				</li>
 				<li class="menu-item" ui-sref-active="selected">
-					<a ui-sref="journal.bankid">
+					<a ui-sref="journal">
 						<h4>Мій журнал</h4>
 					</a>
 				</li>
