Issue #242 - Added admin buttons for service profile (itteration #1)

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -559,6 +559,18 @@ a {
     left: 0px;
 }
 
+.ctrls-srvc-edit {
+    color: #b8a927;
+}
+
+.ctrls-srvc-save {
+    color: green;
+}
+
+.ctrls-srvc-cancel {
+    color: #ff8080;
+}
+
 #ctrls-swch {
     text-decoration: none;
     color: white;
