Issue #242 - Added admin buttons for service profile (itteration #4)

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -563,12 +563,26 @@ a {
     color: #b8a927;
 }
 
-.ctrls-srvc-save, .ctrls-srvc-activate {
+.ctrls-srvc-save {
     color: green;
 }
 
 .ctrls-srvc-cancel {
     color: #ff8080;
+}
+
+.ctrls-srvc-activate {
+    color: green;
+    margin-right: 8px;
+}
+
+.ctrls-srvc-change {
+    color: #b8a927;
+}
+
+.ctrls-srvc-deactivate {
+    color: #ff8080;
+    margin-right: 8px;
 }
 
 #ctrls-swch {
