Issue #242 - Added admin buttons for service profile (itteration #6)

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -586,11 +586,12 @@ a {
 }
 
 .ctrls-block {
-    display: block;
+    display: inline-block;   
+    width: 280px;
 }
 
 .ctrls-line {
-    margin-top: 5px;
+    margin-top: 8px;
 }
 
 #ctrls-swch {
