https://github.com/e-government-ua/i/issues/327 -сейчас шрифт слишком большой, сделать стандартным для портала (таким как список услуг на портале) +

--- a/central-js/client/src/css/custom.css
+++ b/central-js/client/src/css/custom.css
@@ -564,6 +564,11 @@ a {
     font-size: 14px;
 }
 
+.ctrls-about {
+    font-size: 14px;
+}
+
+
 .add0-cat, .add0-subcat, .add0-srvc {
     color: green;
 }
