Стартовая -заменить дефис на тире: - на – -ставить правильные падежи слова “послуга”. Пока в ручном режиме, затем сделать склонения, чтобы не следить. -альт желтого кружочка: Ця послуга буде доступна онлайн дуже скоро. Зайдіть у послугу та залиште свій email, щоб дізнатися, коли стане доступна
Профиль услуги
-вообще убрать вкладку “Обговорення”
-Если нет инфо во вкладках “Як працює”, “Закон” и “ЧаВо”, то ВООБЩЕ вкладки не показывать. Иначе эти пустоты будут только раздражать.

Футер
-убираем “iGov.org.ua @”, а “Зроблено..” равняем по правому краю
-слева ставим ссылки:
Державним органам: додати свою послугу на iGov
Громадянам та бізнесу: в каталозі немає послуги?
Новини Порталу iGov на Facebook

--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -1,5 +1,10 @@
 <footer class="footer">
 	<div class="container">
-            <p class="text-muted text-center"> iGov.org.ua @ Зроблено ІТ-волонтерами України</p>
+            <p class="text-muted text-right">
+                <a href="#">Державним органам: додати свою послугу на iGov</a> 
+                <a href="#">Громадянам та бізнесу: в каталозі немає послуги?</a> 
+                <a href="#">Новини Порталу iGov на Facebook</a> 
+            </p>
+            <!--p class="text-muted text-center"> iGov.org.ua @ Зроблено ІТ-волонтерами України</p-->
 	</div>
 </footer>
