-нужно сделать так, чтобы были видны не только кнопки, но и количество шарингов в каждой из сетей. Например, в сервисе, который мы используем, в самом низу такая панель.
Державним органам:
додати свою послугу

dubilet [6:08 PM]
Немає якоїсь
послуги?

dubilet [6:08 PM]
Новини порталу
на Facebook

--- a/central-js/client/src/html/layouts/footer.html
+++ b/central-js/client/src/html/layouts/footer.html
@@ -3,12 +3,30 @@
             <table style="width: 100%">
                 <tr>
                     <td>
-                        <p class="text-muted text-left">
-                            <a href="#">Державним органам: додати свою послугу на iGov</a> 
-                            <br>
-                            <a href="#">Громадянам та бізнесу: в каталозі немає послуги?</a> 
-                            <a href="#">Новини Порталу iGov на Facebook</a> 
-                        </p>
+                        <!--p class="text-muted text-left"-->
+                        <table>
+                            <tr>
+                                <td>
+                                    <p class="text-muted text-center">
+                                        <a href="#">Державним органам:
+                                            <br>додати свою послугу</a> 
+                                    </p>
+                                </td>
+                                <td>
+                                    <p class="text-muted text-center">
+                                        <a href="#">Немає якоїсь
+                                            <br>послуги?</a> 
+                                    </p>
+                                </td>
+                                <td>
+                                    <p class="text-muted text-center">
+                                        <a href="#">Новини порталу
+                                            <br>на Facebook</a> 
+                                    </p>
+                                </td>
+                            </tr>
+                        </table>
+                        <!--/p-->
                     </td>
                     <td>
                         <p class="text-muted text-right">
